--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -11,4 +11,6 @@
 	<string name="language_set">Spracheinstellungen</string>
 	<string name="one_activity">erste Aktivität</string>
 	<string name="set_activity">Einstellung Aktivität</string>
+	<string name="taiwanyu">Schreibtisch</string>
+	<string name="alaboyu">Arabisch</string>
 </resources>
