--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,6 @@
 	<string name="language_set">language settings</string>
 	<string name="one_activity">First Activity</string>
 	<string name="set_activity">Setting Activity</string>
+	<string name="taiwanyu">Desk</string>
+	<string name="alaboyu">Arabic</string>
 </resources>
