--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -11,4 +11,6 @@
 	<string name="language_set">言語設定</string>
 	<string name="one_activity">最初の活動</string>
 	<string name="set_activity">設定のアクティビティ</string>
+	<string name="taiwanyu">机</string>
+	<string name="alaboyu">アラビア語</string>
 </resources>
