--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,5 @@
 	<string name="set_activity">Setting Activity</string>
 	<string name="taiwanyu">Desk</string>
 	<string name="alaboyu">Arabic</string>
+	<string name="xilayu">Greek</string>
 </resources>
