--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -13,4 +13,5 @@
 	<string name="set_activity">設定のアクティビティ</string>
 	<string name="taiwanyu">机</string>
 	<string name="alaboyu">アラビア語</string>
+	<string name="xilayu">ギリシャ語</string>
 </resources>
