--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="set_activity">设置Activity</string>
     <string name="taiwanyu">台文</string>
     <string name="alaboyu">阿拉伯语</string>
+    <string name="xilayu">希腊语</string>
 </resources>
