--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -13,4 +13,5 @@
 	<string name="set_activity">تعيين النشاط</string>
 	<string name="taiwanyu">طاولة مكتب</string>
 	<string name="alaboyu">عربى</string>
+	<string name="xilayu">اليونانية</string>
 </resources>
