--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,4 +13,5 @@
 	<string name="set_activity">Einstellung Aktivität</string>
 	<string name="taiwanyu">Schreibtisch</string>
 	<string name="alaboyu">Arabisch</string>
+	<string name="xilayu">griechisch</string>
 </resources>
